# GoonGame

./: CMakeLists.txt  README.md
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
maps/: editor_scene.txt
models/: bin.mtl  wafel.mtl
resources/shaders/: lighting.fs  lighting.vs
src/: lobby_server_main.cpp  main.cpp  server_main.cpp  utils.hpp
src/bosses/: adas_gooner.cpp  adas_gooner.hpp  adas_prime.cpp  adas_prime.hpp  gang_boss.cpp  gang_boss.hpp  gibon_rzygacz.cpp  gibon_rzygacz.hpp
src/core/: game.cpp  game.hpp  game_input.cpp  game_interaction.cpp  game_logic.cpp  game_methods.cpp  game_network.cpp  game_render.cpp  game_render_3d.cpp  game_render_final.cpp  game_render_hud.cpp  game_settings.cpp  game_update.cpp
src/editor/: editor.cpp  editor.hpp  editor_gizmo.cpp  editor_ui.cpp
src/effects/: particle_system.cpp  particle_system.hpp
src/enemies/: enemy.cpp  enemy.hpp
src/hud/: menu.cpp  menu.hpp
src/map/: city_map.cpp  city_map.hpp  desert_map.cpp  desert_map.hpp  map.hpp
src/network/: lobby_server.cpp  lobby_server.hpp  network_manager.cpp  network_manager.hpp
src/player/: player.cpp  player.hpp
src/structures/: structure.cpp  structure.hpp
src/vehicles/: tank.cpp  tank.hpp  vehicle.cpp  vehicle.hpp
src/weapons/: ak47.cpp  ak47.hpp  awp.cpp  awp.hpp  builder_tool.cpp  builder_tool.hpp  glock.cpp  glock.hpp  knife.cpp  knife.hpp  minigun.cpp  minigun.hpp  revolver.cpp  revolver.hpp  rpg.cpp  rpg.hpp  shotgun.cpp  shotgun.hpp  weapon.hpp
